--- a/OrderService/src/main/resources/application.yaml
+++ b/OrderService/src/main/resources/application.yaml
@@ -5,7 +5,7 @@ spring:
   application:
     name: ORDER-SERVICE
   datasource:
-    url:  jdbc:mysql://${DB_HOST:localhost}:3306/order-drafts
+    url:  jdbc:mysql://${DB_HOST:localhost}:3306/orderz
     username: root
     password: root
   jpa:
